--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@mui/material": "6.4.3",
+        "@mui/material-pigment-css": "6.4.3",
         "@pigment-css/react": "0.0.30",
         "next": "15.2.0-canary.40",
         "react": "19.0.0",
