--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
         "dev-turbo": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "embeddings": "node --experimental-transform-types scripts/embeddings.ts"
     },
     "dependencies": {
+        "@langchain/community": "^0.3.29",
         "@mui/material": "6.4.3",
         "@mui/material-pigment-css": "6.4.3",
-        "langchain": "0.3.15",
+        "langchain": "^0.3.15",
         "next": "15.2.0-canary.45",
         "react": "19.0.0",
         "react-dom": "19.0.0"
