--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "@langchain/ollama": "0.1.5",
         "@mui/material": "6.4.3",
         "@mui/material-pigment-css": "6.4.3",
+        "ai": "4.1.34",
         "langchain": "^0.3.15",
         "next": "15.2.0-canary.45",
+        "ollama-ai-provider": "^1.2.0",
         "pg": "8.13.1",
         "react": "19.0.0",
-        "react-dom": "19.0.0"
+        "react-dom": "19.0.0",
+        "zod": "3.24.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "3.2.0",
@@ -29,6 +32,7 @@
         "@types/pg": "8.11.11",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
+        "cross-env": "7.0.3",
         "eslint": "9.19.0",
         "eslint-config-next": "15.2.0-canary.45",
         "jiti": "2.4.2",
