--- a/package.json
+++ b/package.json
@@ -11,35 +11,34 @@
         "embeddings": "node --experimental-transform-types scripts/embeddings.ts"
     },
     "dependencies": {
-        "@langchain/community": "0.3.29",
-        "@langchain/ollama": "0.1.5",
-        "@mui/material": "6.4.3",
+        "@langchain/community": "0.3.30",
+        "@langchain/ollama": "0.2.0",
+        "@mui/material": "6.4.4",
         "@mui/material-pigment-css": "6.4.3",
-        "ai": "4.1.34",
+        "ai": "4.1.35",
         "langchain": "^0.3.15",
-        "next": "15.2.0-canary.45",
-        "ollama-ai-provider": "^1.2.0",
-        "pg": "8.13.1",
+        "next": "15.2.0-canary.55",
+        "ollama-ai-provider": "1.2.0",
+        "pg": "8.13.2",
         "react": "19.0.0",
         "react-dom": "19.0.0",
-        "zod": "3.24.1"
+        "zod": "3.24.2"
     },
     "devDependencies": {
         "@eslint/eslintrc": "3.2.0",
         "@pigment-css/nextjs-plugin": "0.0.30",
-        "@stylistic/eslint-plugin": "3.0.1",
+        "@stylistic/eslint-plugin": "3.1.0",
         "@types/node": "22.13.1",
         "@types/pg": "8.11.11",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
-        "cross-env": "7.0.3",
-        "eslint": "9.19.0",
-        "eslint-config-next": "15.2.0-canary.45",
+        "eslint": "9.20.1",
+        "eslint-config-next": "15.2.0-canary.55",
         "jiti": "2.4.2",
         "typescript": "5.7.3",
-        "typescript-eslint": "8.23.0"
+        "typescript-eslint": "8.24.0"
     },
     "overrides": {
-        "next": "15.2.0-canary.45"
+        "next": "15.2.0-canary.55"
     }
 }
