--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "js-deepseek-r1-local-rag",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "ai": "4.1.45",
-    "next": "15.1.7",
-    "ollama-ai-provider": "1.2.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "3.3.0",
-    "@types/node": "22.13.5",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "eslint": "9.21.0",
-    "eslint-config-next": "15.1.7",
-    "typescript": "5.7.3"
-  }
+    "name": "js-deepseek-r1-local-rag",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "embeddings": "node --experimental-transform-types scripts/embeddings.ts"
+    },
+    "dependencies": {
+        "ai": "4.1.45",
+        "langchain": "0.3.19",
+        "next": "15.1.7",
+        "ollama-ai-provider": "1.2.0",
+        "react": "19.0.0",
+        "react-dom": "19.0.0"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "3.3.0",
+        "@types/node": "22.13.5",
+        "@types/react": "19.0.10",
+        "@types/react-dom": "19.0.4",
+        "eslint": "9.21.0",
+        "eslint-config-next": "15.1.7",
+        "typescript": "5.7.3"
+    }
 }
