--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
         "embeddings": "node --experimental-transform-types scripts/embeddings.mts"
     },
     "dependencies": {
+        "@langchain/community": "0.3.32",
         "@langchain/ollama": "0.2.0",
         "ai": "4.1.45",
         "langchain": "0.3.19",
         "next": "15.1.7",
         "ollama-ai-provider": "1.2.0",
+        "pg": "8.13.3",
         "react": "19.0.0",
         "react-dom": "19.0.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "3.3.0",
         "@types/node": "22.13.5",
+        "@types/pg": "8.11.11",
         "@types/react": "19.0.10",
         "@types/react-dom": "19.0.4",
         "eslint": "9.21.0",
