--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@langchain/community": "0.3.32",
         "@langchain/ollama": "0.2.0",
         "ai": "4.1.46",
+        "js-yaml": "4.1.0",
         "langchain": "0.3.19",
         "next": "15.2.0",
         "ollama-ai-provider": "1.2.0",
@@ -22,6 +23,7 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "3.3.0",
+        "@types/js-yaml": "^4.0.9",
         "@types/node": "22.13.5",
         "@types/pg": "8.11.11",
         "@types/react": "19.0.10",
