--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "embeddings": "node --experimental-transform-types scripts/embeddings.mts"
     },
     "dependencies": {
-        "@langchain/community": "0.3.32",
+        "@langchain/community": "0.3.33",
         "@langchain/ollama": "0.2.0",
         "ai": "4.1.46",
         "js-yaml": "4.1.0",
@@ -23,7 +23,7 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "3.3.0",
-        "@types/js-yaml": "^4.0.9",
+        "@types/js-yaml": "4.0.9",
         "@types/node": "22.13.5",
         "@types/pg": "8.11.11",
         "@types/react": "19.0.10",
