--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "ollama-ai-provider": "1.2.0",
         "pg": "8.13.3",
         "react": "19.0.0",
-        "react-dom": "19.0.0"
+        "react-dom": "19.0.0",
+        "react-markdown": "10.0.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "3.3.0",
